File path changes

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <title>
             Hangman Game
         </title>
-        <link rel="stylesheet" href="style.css">
-        <script src="../scripts/expanded-list.js" defer></script>
-        <script src="../scripts/word-list.js" defer></script>
-        <script src="../scripts/script.js" defer></script>
+        <link rel="stylesheet" href="./style.css">
+        <script src="./scripts/expanded-list.js" defer></script>
+        <script src="./scripts/word-list.js" defer></script>
+        <script src="./scripts/script.js" defer></script>
     </head>
 
     <body>
@@ -55,7 +55,7 @@
         
         <div class="game-modal">
             <div class="content">
-                <img src="../images/lost.gif" alt="gif">
+                <img src="./images/lost.gif" alt="gif">
                 <h4>Game Over!</h4>
                 <p>The correct word was: <b>rainbow</b></p>
                 <button class="play-again">Play Again</button>
@@ -63,7 +63,7 @@
         </div>
         <div class="container">
             <div class="hangman-box">
-                <img src="../images/hangman-0.svg" alt="Hangman-base-img">
+                <img src="./images/hangman-0.svg" alt="Hangman-base-img">
                 <h1>Hangman Game</h1>
             </div>
             <div class="difficulty-menu">
@@ -91,7 +91,7 @@
                 <button id="skip-button">Skip</button>
                 <button id="music-button">Play Music</button>
                 <audio id="background-music" autoplay loop>
-                  <source src="../audio/BW 109 Professor Juniper.ogg" type="audio/ogg">
+                  <source src="./audio/BW 109 Professor Juniper.ogg" type="audio/ogg">
                 </audio>
             </div>
     </div>
